--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -344,6 +344,12 @@ Main
     .container-info2
         h2
             font-size: 2em
+    .galeria-short
+        padding: 0
+        .imgs
+            height: 100px
+            width: 100px
+
 
 @media (max-width:425px)
     .container-info, .container-info2
@@ -353,3 +359,53 @@ Main
     .container-info2
         h2
             font-size: 1.5em
+
+@media (max-width:420px)
+    #banner, .frase-impacto
+        h1
+            font-size: 2em
+        h2
+            font-size: 1.4em
+        h3
+            font-size: 1.4em
+        h4
+            font-size: 1.4em
+        p
+            font-size: 1em
+    
+    .container-info, .container-info2
+        .info-text
+            h1
+                font-size: 2em
+            h2
+                font-size: 1.4em
+            h3
+                font-size: 1.4em
+            h4
+                font-size: 1.4em
+            p
+                font-size: 1em
+    .videio-container
+        h1
+            font-size: 2em
+        h2
+            font-size: 1.4em
+        h3
+            font-size: 1.4em
+        h4
+            font-size: 1.4em
+        p
+            font-size: 1em
+
+@media (max-width:375px)
+    .container-info
+        .imagem
+            min-width: 200px
+            width: 200px
+            height: 200px
+    .galeria
+        .imgs
+            height: 200px
+            min-width: 200px
+    
+        
